# Helix-EXon-finder

./: HEX-finder.py  HEX-finder.sh  LICENSE  README.md  environment-amd.yml  environment.yml  get_demo_seqs.py  get_demo_sequences.sh  pyproject.toml  setup.sh  visualize_predictions.py  visualize_predictions.sh
data/: DATA_README.md
demo_sequences/: 20_seqs  20_seqs_truth_features_local.gff  30_seqs_new_seed_coords  30_seqs_new_seed_truth_features_local.gff  30_short_seqs.fasta  30_short_seqs_coords  30_short_seqs_truth_features_local.gff  Figure11_demo_coords  Figure11_demo_coords_truth_features_local.gff  Figure11_demo_regions.fasta  example_length_distribution  short
dependencies/: environment.yml
src/: fetch_reference.sh  get_demo_seqs.py  hex_finder.py  keras_models.py  paths.py  profile_generator_inference.py  tf_quiet.py  utility_methods.py  visualize_predictions.py
src/Helix_EXon_Finder/: cli.py  cli_entry.py  fetch_reference.sh  get_demo_seqs.py  hex_finder.py  paths.py  profile_generator_inference.py  visualize_predictions.py
